<resources>
    <string name="app_name">Lixo Eletrônico</string>


    <string-array name="estado">
        <item>MG</item>
    </string-array>


    <string-array name="cidade">
        <item>Lavras</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_memu1">Bem-vindo!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_locais">Pontos de Coleta</string>
    <string name="title_activity_mapa">Pontos de Coleta</string>
    <string name="title_activity_menu">Lixo Eletrônico</string>
    <string name="title_activity_perfil">Minhas doaçoes</string>
    <string name="title_activity_agenda">Agendamento</string>

    <string-array name="horario">
        <item>7:00 - 11:00 </item>
        <item>11:00 - 14:00 </item>
        <item>15:00 - 18:00 </item>
    </string-array>

    <string-array name="categoria">
        <item>Aparelhos</item>
        <item>Peças de Aparelhos</item>
        <item>Outros</item>
    </string-array>

    <string-array name="array_aparelhos">
        <item>Computador</item>
        <item>Notebook</item>
        <item>Netbook</item>
        <item>Celular</item>
        <item>Tablet</item>
    </string-array>

    <string-array name="array_pecas">
        <item>Placa Mãe</item>
        <item>Memória RAM</item>
        <item>HD</item>
        <item>Monitor</item>
        <item>CPU</item>
        <item>Bateria</item>
        <item>Display</item>
    </string-array>

    <string-array name="array_outros">
        <item>TV</item>
        <item>Impressora</item>
        <item>Projetor</item>
    </string-array>

    <string name="inf_lixoeltronico"> Lixo Eletrônico é todo resíduo proveniente do descarte de equipamentos eletrônicos.
</string>

    <string name="texto1">Quando descartado em locais inadequados, tais resíduos causam um impacto ambiental muito grande, pois
possuem em sua composição  elementos altamente tóxicos como mercúrio, cádmio, berílio e chumbo, que prejudicam o meio ambiente contaminando não apenas as pessoas
que realizam o manuseio de tais materiais sem os devidos conhecimentos de reciclagem,
como também solo, água e consequentemente as plantas, os animais e as pessoas.
    </string>

    <string name="texto2">Portanto, o ideal é que equipamentos eletrônicos sejam coletados e tratados de forma correta, e com os devidos
conhecimentos para manuzear esse tipo de material. Além disso, o reaproveitamento ou reciclagem desses equipamentos
iria reduzir a produção de lixo eletrônico e de novos equipamentos.
    </string>

    <string name="inf_title1"> Lixo Eletrônico </string>
    <string name="inf_title2">Exemplos de lixo eletrônico:</string>
    <string name="inf_title3">Proposta do Aplicativo:</string>

    <string name="inf_text1_1">- Aparelhos Eletrônicos (Computadores, Notebooks, Tablets, Smartphones).</string>
    <string name="inf_text1_2">- Peças de Aparelhos(Monitores, CPUs, Placa Mãe, Baterias, Memória RAM, etc).</string>
    <string name="inf_text1_3">- Outros(Impressoras, TVs, Projetores).</string>


    <string name="inf_text2_1">Visualizar pontos de coleta e a menor rota para chegar a este ponto.</string>
    <string name="inf_text2_2">Agendar uma coleta sem sair de casa.</string>
    <string name="inf_text2_3">Ganhe pontos em cada coleta.</string>


    <string name="title_activity_moedas">Minhas Moedas</string>
    <string name="title_activity_endereco">Agendamento</string>
    <string name="title_activity_aparelhos">Agendamento</string>
    <string name="title_activity_agendamento">Agendamento</string>


    <string name="mais_title"> Projetos já existentes:</string>





</resources>
