<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="16dp"
    tools:context="br.com.lixoeletronico.lixoeletronico.InformacoesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inf_title1"
                android:textSize="24sp"
                android:textColor="@color/fundo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="sans"
                android:text="@string/inf_lixoeltronico"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="sans"
                android:layout_marginTop="18dp"
                android:text="@string/texto1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="sans"
                android:layout_marginTop="12dp"
                android:text="@string/texto2"
                android:textSize="18sp"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_title2"
            android:textSize="20sp"
            android:textColor="@color/fundo"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_text1_1"
            android:textSize="18sp"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_text1_2"
            android:textSize="18sp"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_text1_3"
            android:textSize="18sp"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_title3"
            android:textSize="20sp"
            android:textColor="@color/fundo"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_text2_1"
            android:textSize="18sp"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_text2_2"
            android:textSize="18sp"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_text2_3"
            android:textSize="18sp"/>


    </LinearLayout>

</ScrollView>
